--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "basic-nestjs",
   "version": "1.0.0",
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
@@ -7,24 +7,36 @@
     "start": "node index.js",
     "start:watch": "nodemon",
     "prestart:prod": "tsc",
-    "start:prod": "node dist/server.js"
+    "start:prod": "node dist/server.js",
+    "test": "jest --config=jest.json",
+    "test:watch": "jest --watch --config=jest.json",
+    "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage",
+    "e2e": "jest --config=e2e/jest-e2e.json",
+    "e2e:watch": "jest --watch --config=e2e/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^4.0.0",
     "@nestjs/core": "^4.0.0",
+    "@nestjs/cqrs": "^4.0.1",
     "@nestjs/microservices": "^4.0.0",
     "@nestjs/testing": "^4.0.0",
     "@nestjs/websockets": "^4.0.0",
     "body-parser": "^1.18.2",
     "class-validator": "^0.7.2",
+    "jsonwebtoken": "^8.1.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.0",
-    "typescript": "^2.5.2"
+    "rxjs": "^5.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^21.1.4",
     "@types/node": "^8.0.28",
+    "jest": "^21.2.1",
     "nodemon": "^1.12.1",
-    "ts-node": "^3.3.0"
+    "ts-jest": "^21.1.3",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.5.2"
   }
 }
